CampaignDrop.CopyOf, DeleteCPMReport, DeleteCampaignDropCopy, etc

--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -252,6 +252,7 @@
     <Compile Include="DTOs\WeeklySearchStat.cs" />
     <Compile Include="Entities\Advertiser.cs" />
     <Compile Include="Entities\CakeContact.cs" />
+    <Compile Include="Entities\Campaign.cs" />
     <Compile Include="Entities\CampaignDrop.cs" />
     <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\CPMReport.cs" />
