--- a/3/ClientPortal.Web/ClientPortal.Web/Web.Debug.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.Debug.config
@@ -18,7 +18,7 @@
   </connectionStrings>
 
   <appSettings>
-    <add key="PortalUrl" value="http://test.portal.directagents.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="PortalUrl" value="http://clientportal.directagents.local" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <system.web>
