--- a/3/ClientPortal.Web/ClientPortal.Web/Web.Release.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.Release.config
@@ -15,7 +15,7 @@
   </connectionStrings>
 
   <appSettings>
-    <add key="PortalUrl" value="https://portal.directagents.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="PortalUrl" value="https://portal.directagents.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <system.web>
