--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -19,7 +19,7 @@
     <add key="UseBlackbird" value="true" />
     <add key="UseNullDatabaseInitializer" value="false" />
     <add key="EmailFromDefault" value="reporting@directagents.com" />
-    <add key="PortalUrl" value="http://clientportal.directagents.local/" />
+    <add key="PortalUrl" value="http://localhost:60195" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
