--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -596,6 +596,7 @@
     <Content Include="Images\logo1a.png" />
     <Content Include="Images\da.jpeg" />
     <Content Include="Images\logo1.png" />
+    <Content Include="Images\logo1w.png" />
     <Content Include="Images\logoSelectQuote.png" />
     <Content Include="Images\spacer.gif" />
     <Content Include="robots.txt" />
