--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -20,6 +20,7 @@
     <add key="UseNullDatabaseInitializer" value="false" />
     <add key="EmailFromDefault" value="reporting@directagents.com" />
     <add key="PortalUrl" value="http://localhost:60195" />
+    <add key="UseYesterdayAsLatest" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
