--- a/1/EomTool/DAgents.DirectTrack/DirectAgents.Synch.csproj
+++ b/1/EomTool/DAgents.DirectTrack/DirectAgents.Synch.csproj
@@ -94,9 +94,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DAgents.Common\DirectAgents.Common.csproj">
+    <ProjectReference Include="..\DAgents.Common\DAgents.Common.csproj">
       <Project>{C96A7A6B-F15A-4C83-B871-0DF48E798C5F}</Project>
-      <Name>DirectAgents.Common</Name>
+      <Name>DAgents.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\DirectTrack.Rest\DirectTrack.Rest.csproj">
       <Project>{A5D217FE-1556-4ABD-BFDF-F5A2D65F5D8A}</Project>
