--- a/1/Solution/packages/repositories.config
+++ b/1/Solution/packages/repositories.config
@@ -12,4 +12,5 @@
   <repository path="..\..\EomTool\EomToolWeb\packages.config" />
   <repository path="..\..\QuickBooks.Test\packages.config" />
   <repository path="..\..\QuickBooks\packages.config" />
+  <repository path="..\..\QuickBooksService\packages.config" />
 </repositories>
