--- a/1/AccountingBackupWeb.Models/AccountingBackupWeb.Models.csproj
+++ b/1/AccountingBackupWeb.Models/AccountingBackupWeb.Models.csproj
@@ -579,9 +579,9 @@
     <Content Include="Staging\Staging.edmx.sql" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EomTool\DAgents.Common\DirectAgents.Common.csproj">
+    <ProjectReference Include="..\EomTool\DAgents.Common\DAgents.Common.csproj">
       <Project>{C96A7A6B-F15A-4C83-B871-0DF48E798C5F}</Project>
-      <Name>DirectAgents.Common</Name>
+      <Name>DAgents.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
