--- a/1/EomTool/EomApp1/EomApp1.csproj
+++ b/1/EomTool/EomApp1/EomApp1.csproj
@@ -1487,9 +1487,9 @@
       <Project>{7ab15a9f-c226-449b-ab25-91e2ad18f4dc}</Project>
       <Name>QuickBooks</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DAgents.Common\DirectAgents.Common.csproj">
+    <ProjectReference Include="..\DAgents.Common\DAgents.Common.csproj">
       <Project>{C96A7A6B-F15A-4C83-B871-0DF48E798C5F}</Project>
-      <Name>DirectAgents.Common</Name>
+      <Name>DAgents.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\DAgents.DirectTrack\DirectAgents.Synch.csproj">
       <Project>{4C08DC70-20A6-4D3B-AB4B-5AAA04521118}</Project>
