--- a/1/EomTool/EomAppControls/EomApp.Controls.csproj
+++ b/1/EomTool/EomAppControls/EomApp.Controls.csproj
@@ -99,9 +99,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DAgents.Common\DirectAgents.Common.csproj">
+    <ProjectReference Include="..\DAgents.Common\DAgents.Common.csproj">
       <Project>{C96A7A6B-F15A-4C83-B871-0DF48E798C5F}</Project>
-      <Name>DirectAgents.Common</Name>
+      <Name>DAgents.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
