--- a/1/EomTool/EomAppModels/EomApp.Models.csproj
+++ b/1/EomTool/EomAppModels/EomApp.Models.csproj
@@ -88,9 +88,9 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DAgents.Common\DirectAgents.Common.csproj">
+    <ProjectReference Include="..\DAgents.Common\DAgents.Common.csproj">
       <Project>{C96A7A6B-F15A-4C83-B871-0DF48E798C5F}</Project>
-      <Name>DirectAgents.Common</Name>
+      <Name>DAgents.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
