--- a/1/Solution/packages/repositories.config
+++ b/1/Solution/packages/repositories.config
@@ -13,4 +13,5 @@
   <repository path="..\..\QuickBooks.Test\packages.config" />
   <repository path="..\..\QuickBooks\packages.config" />
   <repository path="..\..\QuickBooksService\packages.config" />
+  <repository path="..\DirectAgents.Common\packages.config" />
 </repositories>
