--- a/1/ApiClient.Models.DirectTrack/App.config
+++ b/1/ApiClient.Models.DirectTrack/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DirectTrackDbContext" connectionString="data source=.\sql2;initial catalog=DirectTrack;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /><add name="DirectTrackEntities" connectionString="metadata=res://*/ModelFirst.DirectTrack.csdl|res://*/ModelFirst.DirectTrack.ssdl|res://*/ModelFirst.DirectTrack.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=DirectTrack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="DirectTrackEntities1" connectionString="metadata=res://*/ModelFirst.DTModel.csdl|res://*/ModelFirst.DTModel.ssdl|res://*/ModelFirst.DTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=DirectTrack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
