--- a/1/ApiClient/packages.config
+++ b/1/ApiClient/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging" version="2.0.0" targetFramework="net40-Client" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40-Client" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="IronPython" version="2.7.3" targetFramework="net40-Client" />
-  <package id="Spring.Rest" version="1.1.0" targetFramework="net40-Client" />
+  <package id="Spring.Rest" version="1.1.0" targetFramework="net40-Client" requireReinstallation="True" />
 </packages>
