--- a/1/Solution/CampaignUpdater/App.config
+++ b/1/Solution/CampaignUpdater/App.config
@@ -9,8 +9,8 @@
   </startup>
 
   <connectionStrings>
-    <add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User=sa;Password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    <add name="EFDbContext" connectionString="data source=biz2\da;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=Cake;User=sa;Password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="EFDbContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
