--- a/1/ApiClient/App.config
+++ b/1/ApiClient/App.config
@@ -7,7 +7,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="CakeDbContext" connectionString="data source=biz2\da;initial catalog=Cake;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CakeDbContext" connectionString="data source=biz\sqlexpress;initial catalog=Cake;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="DirectTrackDbContext" connectionString="data source=.\sql2;initial catalog=DirectTrack;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="DirectTrackEntities1" connectionString="metadata=res://*/ModelFirst.DTModel.csdl|res://*/ModelFirst.DTModel.ssdl|res://*/ModelFirst.DTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=DirectTrack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
