--- a/1/EomTool/EomToolSecurityWeb/EomToolSecurity/web.config
+++ b/1/EomTool/EomToolSecurityWeb/EomToolSecurity/web.config
@@ -18,6 +18,6 @@
     <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="EomToolSecurityEntities" connectionString="metadata=res://*/EomToolSecurity.csdl|res://*/EomToolSecurity.ssdl|res://*/EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EomToolSecurityEntities" connectionString="metadata=res://*/EomToolSecurity.csdl|res://*/EomToolSecurity.ssdl|res://*/EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
