--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -678,10 +678,9 @@
     <Content Include="Areas\Admin\Views\CPMReportsWizard\SynchCampaigns.cshtml" />
     <Content Include="Areas\Admin\Views\CPMReportsWizard\SynchCreatives.cshtml" />
     <Content Include="Areas\Admin\Views\Offers\EditLogoInner.cshtml" />
-    <Content Include="Areas\Admin\Views\CPMReportsWizard\Test.cshtml" />
     <Content Include="Areas\Admin\Views\CampaignDropsWizard\ChooseCampaign.cshtml" />
     <Content Include="Areas\Admin\Views\CPMReportsWizard\ReviewDrops.cshtml" />
-    <Content Include="Areas\Admin\Views\CPMReportsWizard\ReportName.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReportsWizard\CreateReport.cshtml" />
     <Content Include="Areas\Admin\Views\CampaignDropsWizard\Details.cshtml" />
     <Content Include="Areas\Admin\Views\CampaignDropsWizard\Creatives.cshtml" />
     <Content Include="Areas\Admin\Views\CampaignDropsWizard\ShowDrop.cshtml" />
@@ -690,6 +689,8 @@
     <Content Include="Areas\Admin\Views\CampaignDropsWizard\FinalReviewEdit.cshtml" />
     <Content Include="Areas\Admin\Views\Creatives\EditThumbnailInner.cshtml" />
     <Content Include="Areas\Admin\Views\CampaignDropsWizard\CreativeThumbnail.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReportsWizard\AddDrops.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReportsWizard\EditReport.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
