--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Contexts\CreativeType.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\DailySummary.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\DeviceClicks.cs">
       <DependentUpon>ClientPortalDW.tt</DependentUpon>
     </Compile>
