--- a/1/EomTool/DAgents.Common/DAgents.Common.csproj
+++ b/1/EomTool/DAgents.Common/DAgents.Common.csproj
@@ -47,6 +47,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.0.5022.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft Enterprise Library 5.0\Bin\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
@@ -66,6 +69,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleHelper.cs">
@@ -76,6 +82,7 @@
     <Compile Include="EmailUtility.cs" />
     <Compile Include="EomAppSettings.cs" />
     <Compile Include="ITransformText.cs" />
+    <Compile Include="SLExcelUtility.cs" />
     <Compile Include="SqlBatch.cs" />
     <Compile Include="IAccessor.cs" />
     <Compile Include="IConfigure.cs" />
